@startuml

title __WIDGET's Class Diagram__\n

  namespace BowlingGame {
    namespace Widget {
      class Widget.ButtonPanel {
          + ButtonPanel()
          + ButtonPanel()
          + put()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      class Widget.ContainerPanel {
          + ContainerPanel()
          + ContainerPanel()
          + ContainerPanel()
          + ContainerPanel()
          + ContainerPanel()
          + clear()
          + getPanel()
          + put()
          + put()
          + put()
          + put()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      abstract class Widget.FormPanel {
          ~ components : HashMap<String, Component>
          + get()
          ~ FormPanel()
          ~ FormPanel()
          - setupComponentStore()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      abstract class Widget.GenericPanel {
          ~ panel : JPanel
          + getPanel()
          ~ GenericPanel()
          ~ GenericPanel()
          ~ GenericPanel()
          ~ GenericPanel()
          ~ GenericPanel()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      class Widget.GridPanel {
          - blockLabel : JLabel[]
          - itemLabel : JLabel[]
          + GridPanel()
          + getBlockLabel()
          + getItemLabel()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      class Widget.ScrollablePanel {
          - dataList : JList<T>
          + ScrollablePanel()
          + ScrollablePanel()
          + getList()
          + getPanel()
          + setListData()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      class Widget.TextFieldPanel {
          + TextFieldPanel()
          + getText()
          + put()
      }
    }
  }
  

  namespace BowlingGame {
    namespace Widget {
      class Widget.WindowFrame {
          - win : JFrame
          + WindowFrame()
          + destroy()
          + setVisible()
          - WindowFrame()
      }
    }
  }
  

  Widget.ButtonPanel -up-|> Widget.FormPanel
  Widget.ContainerPanel -up-|> Widget.GenericPanel
  Widget.FormPanel -up-|> Widget.GenericPanel
  Widget.GridPanel -up-|> Widget.GenericPanel
  Widget.ScrollablePanel -up-|> Widget.GenericPanel
  Widget.TextFieldPanel -up-|> Widget.FormPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
